feat(pkg/dta): use `State Store` arbiter to get list of stores and update active store in `SS Store Selector` component

--- a/packages/devtool-app/src/app/state-store/components/tab-sidebar/store-selector/store-selector.html
+++ b/packages/devtool-app/src/app/state-store/components/tab-sidebar/store-selector/store-selector.html
@@ -2,12 +2,12 @@
     name="state-store-selector" 
     id="state-store-selector" 
     class="state-store-selector"
-    [(ngModel)]="vSelectedStateStoreName"
+    [(ngModel)]="fcSelectedStateStoreName"
   >
   <option
     class="state-store-selector-item"
     *ngFor="let stateStoreName of stateStoresNames"
     [value]="stateStoreName"
-    [class.active]="stateStoreName === selectedStateStoreName"
+    [class.active]="stateStoreName === selectedStateStore"
   >{{ stateStoreName }}</option>
 </select>
