chore(pkg/dta): fix TS compiler issues

--- a/packages/devtool-app/src/app/shared/components/object-render/object-render.html
+++ b/packages/devtool-app/src/app/shared/components/object-render/object-render.html
@@ -1,5 +1,5 @@
 <div
-  [krixClickDelegate]
+  krixClickDelegate
   (dClick)="onClickToggleObject($event)"
   [tagSelectors]="[ '.object-value-preview' ]"
 >
